--- a/src/main/resources/templates/shared/fileStorageService.mustache
+++ b/src/main/resources/templates/shared/fileStorageService.mustache
@@ -3,9 +3,9 @@ package {{package}};
 {{#imports}}
 import {{.}};
 {{/imports}}
-
+import java.util.List;
 
 public interface FileStorageService {
 
-String storeFile(MultipartFile file);
+String storeFile(List<MultipartFile> file, MetaRequest metaRequest);
 }
