--- a/src/main/resources/templates/application/updateApplicationService.mustache
+++ b/src/main/resources/templates/application/updateApplicationService.mustache
@@ -3,7 +3,7 @@ package {{package}};
 {{#imports}}
 import {{.}};
 {{/imports}}
-
+import java.util.List;
 import org.axonframework.commandhandling.gateway.CommandGateway;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -19,33 +19,46 @@ private final CommandGateway commandGateway;
 {{#hasFiles}}
 public {{name}}Response update{{name}}(
 {{name}}Id id, {{#hasFiles}}
-{{#fieldFiles}}MultipartFile {{nameCamelCase}}, {{/fieldFiles}}{{/hasFiles}}
-{{#fields}}
+{{#fieldFiles}}List<MultipartFile> {{nameUnCapitalized}}MultipartFile, {{/fieldFiles}}{{/hasFiles}}
+{{#editableFields}}
 	{{^isId}}
-		{{primitiveType}} {{nameCamelCase}}{{^last}},{{/last}}
+	{{^isFiles}}
+		{{primitiveType}} {{nameUnCapitalized}}{{^last}},{{/last}}
+	{{/isFiles}}
 	{{/isId}}
-{{/fields}},
+{{/editableFields}},
 MetaRequest metaRequest
 ) {
-{{#fieldFiles}}
-	{{entity}}{{nameCapitalized}} {{nameCamelCase}}Reference = {{entity}}{{nameCapitalized}}.create(fileStorageService.storeFile({{nameCamelCase}}));
-{{/fieldFiles}}
 
+{{^hasFiles}}
 {{name}}Request request = new {{name}}Request(
-{{#fields}}
-	{{^isId}}{{nameCamelCase}}{{^last}},{{/last}}{{/isId}}
-{{/fields}}
+{{#editableFields}}
+    {{^isId}}
+{{^isFiles}}
+	{{^isId}}{{nameUnCapitalized}}{{^last}},{{/last}}{{/isId}}
+{{/isFiles}}
+{{/isId}}
+{{/editableFields}}
 );
-
+{{/hasFiles}}
 Update{{name}}Command command = {{name}}Mapper.toUpdateCommand(
-id,
-request{{#hasFiles}},
-{{#fieldFiles}}{{nameCamelCase}}Reference{{^last}}, {{/last}}{{/fieldFiles}}{{/hasFiles}}
+    id{{#hasFiles}},
+    {{#editableFields}}{{^isId}}   new {{nameAggregate}}{{nameCapitalized}}({{nameUnCapitalized}}){{^last}},
+    {{/last}} {{/isId}} {{/editableFields}}{{/hasFiles}}
 );
 
-commandGateway.sendAndWait(command);
+    command.setCreatedBy({{name}}CreatedBy.create(metaRequest.getUserId()));
+    command.setTenant({{name}}Tenant.create(metaRequest.getTenantId()));
 
-return {{name}}Mapper.toResponse(command);
+    commandGateway.sendAndWait(command);
+
+    {{#fieldFiles}}
+    metaRequest.setObjectId(command.getId().value());
+    metaRequest.setObjectName("{{entityLowerCase}}");
+    fileStorageService.storeFile({{nameUnCapitalized}}MultipartFile, metaRequest);
+    {{/fieldFiles}}
+
+    return {{name}}Mapper.toResponse(command);
 }
 {{/hasFiles}}
 
@@ -59,9 +72,8 @@ id,
 request
 );
 
-if(metaRequest.getTenantId() != null) {
-	//command.setTenant({{name}}Tenant.create(metaRequest.getTenantId()));
-}
+command.setCreatedBy({{name}}CreatedBy.create(metaRequest.getUserId()));
+command.setTenant({{name}}Tenant.create(metaRequest.getTenantId()));
 
 commandGateway.sendAndWait(command);
 
