--- a/src/main/resources/templates/presentation/createWithFilesController.mustache
+++ b/src/main/resources/templates/presentation/createWithFilesController.mustache
@@ -20,6 +20,7 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import lombok.AllArgsConstructor;
+import java.util.List;
 {{#security}}
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.core.Authentication;
@@ -53,13 +54,15 @@ public ResponseEntity<{{name}}Response> add{{name}}(
 	@AuthenticationPrincipal Jwt jwt,
 	{{#hasFiles}}
 	{{#fieldFiles}}
-		@RequestPart("{{nameCamelCase}}") MultipartFile {{nameCamelCase}}{{^last}},{{/last}}{{/fieldFiles}},
+		@RequestPart(value ="{{nameUnCapitalized}}", required = false) List<MultipartFile> {{nameUnCapitalized}}{{^last}},{{/last}}{{/fieldFiles}},
 	{{/hasFiles}}
-	{{#fields}}
-		{{^isId}}
-			@RequestParam("{{nameCamelCase}}") {{primitiveType}} {{nameCamelCase}}{{^last}},{{/last}}
-		{{/isId}}
-	{{/fields}}
+	{{#editableFields}}
+        {{^isFiles}}
+    {{^isId}}
+        @RequestPart(value ="{{nameUnCapitalized}}", required = false) {{primitiveType}} {{nameUnCapitalized}}{{^last}},{{/last}}
+    {{/isId}}
+    {{/isFiles}}
+	{{/editableFields}}
 	) {
 	try {
 
@@ -71,8 +74,8 @@ public ResponseEntity<{{name}}Response> add{{name}}(
 	metaRequest.setIsAdmin(RequestContext.isAdmin(jwt));
 
 	{{name}}Response response = applicationService.create{{name}}(
-	{{#fieldFiles}}{{nameCamelCase}}{{^last}}, {{/last}}{{/fieldFiles}}{{#fields}}{{^isId}},
-		{{nameCamelCase}}{{/isId}}{{/fields}},
+	{{#fieldFiles}}{{nameUnCapitalized}}{{^last}}, {{/last}}{{/fieldFiles}}{{#editableFields}}{{^isFiles}}{{^isId}},
+		{{nameUnCapitalized}}{{/isId}}{{/isFiles}}{{/editableFields}},
 	metaRequest
 	);
 
