--- a/src/main/resources/templates/presentation/updateWithFilesController.mustache
+++ b/src/main/resources/templates/presentation/updateWithFilesController.mustache
@@ -14,7 +14,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
-
+import java.util.List;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -55,13 +55,15 @@ public ResponseEntity<{{name}}Response> add{{name}}(
 	@PathVariable String id,
 	{{#hasFiles}}
 		{{#fieldFiles}}
-			@RequestPart("{{nameCamelCase}}") MultipartFile {{nameCamelCase}}{{^last}},{{/last}}{{/fieldFiles}},
+			@RequestPart(value ="{{nameUnCapitalized}}", required = false) List<MultipartFile> {{nameUnCapitalized}}{{^last}},{{/last}}{{/fieldFiles}},
 	{{/hasFiles}}
-	{{#fields}}
+	{{#editableFields}}
 		{{^isId}}
-			@RequestParam("{{nameCamelCase}}") {{primitiveType}} {{nameCamelCase}}{{^last}},{{/last}}
+            {{^isFiles}}
+			@RequestPart(value ="{{nameUnCapitalized}}", required = false) {{primitiveType}} {{nameUnCapitalized}}{{^last}},{{/last}}
+            {{/isFiles}}
 		{{/isId}}
-	{{/fields}}
+	{{/editableFields}}
 	) {
 	try {
 
@@ -74,8 +76,8 @@ public ResponseEntity<{{name}}Response> add{{name}}(
 
 	{{name}}Response response = applicationService.update{{name}}(
 	{{name}}Id.create(id),
-	{{#hasFiles}}{{#fieldFiles}}{{nameCamelCase}},{{/fieldFiles}}{{/hasFiles}}{{#fields}}{{^isId}}
-		{{nameCamelCase}}{{^last}},{{/last}}{{/isId}}{{/fields}},
+	{{#hasFiles}}{{#fieldFiles}}{{nameUnCapitalized}},{{/fieldFiles}}{{/hasFiles}}{{#editableFields}}{{^isFiles}}{{^isId}}
+		{{nameUnCapitalized}}{{^last}},{{/last}}{{/isId}}{{/isFiles}}{{/editableFields}},
 	metaRequest
 	);
 
