--- a/src/main/resources/templates/front/angular/service.mustache
+++ b/src/main/resources/templates/front/angular/service.mustache
@@ -65,12 +65,37 @@ export class {{entity}}Service {
   }
 
 {{/hasFiles}}
-
+{{^hasFiles}}
   update(id: string, dto: Partial<{{entity}}>): Observable<any> {
     return this.http.put(`${this.base}/commands/{{entityLowerCase}}/${id}`, dto, {
       headers: this.headers(),
     });
   }
+{{/hasFiles}}
+
+{{#hasFiles}}
+    update(id: string, dto: Partial<{{entity}}>): Observable<any> {
+
+    const form = new FormData();
+    {{#fields}}
+    {{#isFiles}}
+    if (dto.{{name}}) {
+    for (const file of dto.{{name}}) {
+    form.append('{{name}}', file);
+    }
+    }
+    {{/isFiles}}
+    {{^isFiles}}
+    if(dto.{{name}} != undefined && dto.{{name}} !== null && dto.{{name}}.length > 0) {
+    form.append('{{name}}', dto.{{name}});
+    }
+    {{/isFiles}}
+    {{/fields}}
+
+    return this.http.put(`${this.base}/commands/{{entityLowerCase}}/${id}`, form);
+  }
+{{/hasFiles}}
+
 
   delete(id: string): Observable<any> {
     return this.http.delete(`${this.base}/commands/{{entityLowerCase}}/${id}`, {
